--- a/static_files/style.less/style.less
+++ b/static_files/style.less/style.less
@@ -77,7 +77,6 @@ header {
 	
 	.compreja {
 		margin-left: 40%;
-		margin-top: 2.5%;
 		width: 58%;
 	}
 
@@ -138,10 +137,20 @@ header {
 .compreja {
 	text-align: center;
 
+	h3 {
+		font-family: 'Tienne', serif;
+		color: #999;
+		font-size: 190%;
+		font-weight: lighter;
+		margin: 10px;
+		text-shadow: 0px -1px 1px rgba(200,200,200,0.5);
+	}
+
 	a {
 		background: #ff7f00;
 		color: white;
-		font-size: 190%;
+		font-size: 150%;
+		font-weight: normal;
 		padding: 6px 4%;
 		
 		&:hover {
@@ -771,6 +780,7 @@ footer {
 	
 	.compreja {
 		font-size: 12px;
+		margin-top: 30px;
 	}
 }
 
@@ -780,6 +790,7 @@ footer {
 		height: 450px;
 	
 		p {
+			padding-top: 10px;
 			padding-left: 0;
 			padding-right: 0;
 			width: 57%;
@@ -811,6 +822,15 @@ footer {
 			width: 96%;
 		}
 	}
+
+	.compreja {
+		margin-top: 20px;
+
+		h3 {
+			font-size: 170%;
+			margin: 5px 0;
+		}
+	}
 }
 
 // kindle fire portrait
@@ -827,7 +847,17 @@ footer {
 		img {
 			width: 35%;
 		}
-	}	
+	}
+	.compreja {
+		margin-top: 12px;
+
+		h3 {
+			margin: 0;
+		}
+		a {
+			font-size: 175%;
+		}
+	}
 	#descricao {
 		#texto {
 			margin-left: 12%;
@@ -932,6 +962,14 @@ footer {
 			}
 		}
 	}
+	.compreja {
+		margin-top: 8px;
+
+		a {
+			padding-top: 3px;
+			padding-bottom: 3px;
+		}
+	}
 	section h1 {
 		font-size: 180%;
 	}
@@ -969,9 +1007,6 @@ footer {
 			width: 300px;
 		}
 	}
-	.compreja {
-		font-size: 9px;	
-	}
 }
 
 // phone portrait
@@ -996,13 +1031,13 @@ footer {
 		}
 		.compreja {
 			margin-left: 37%;
-			margin-top: 12%;
+			margin-top: 5%;
 			width: 60%;
-
-			a {
-				padding-left: 3px;
-				padding-right: 3px;
-			}
+		}
+	}
+	.compreja {
+		h3 {
+			margin: 10px 0;
 		}
 	}
 	#descricao {
@@ -1097,7 +1132,7 @@ footer {
 	}
 	.compreja {
 		a {
-			padding: 8px 2%;
+			padding: 5px 8px;
 		}
 		span {
 			font-size: 150%;
@@ -1134,10 +1169,9 @@ footer {
 		.compreja {
 			margin: 3em auto;
 			width: 100%;
-
-			a {
-				padding-left: 2%;
-				padding-right: 2%;
+			
+			span {
+				margin-top: 10px;
 			}
 		}
 	}
