digital vira link e nao botao

--- a/src/css/nicebuttons.css
+++ b/src/css/nicebuttons.css
@@ -1,133 +1,1 @@
-/* Botões bacanas by Sérgio Lopes
- *   http://sergiolopes.github.com/css3-experimentos/botoes-css3/ 
- */
-.nicebutton {
-  /* fundo gradiente */
-
-  background-color: #444;
-  background-image: -moz-linear-gradient(top, rgba(255, 255, 255, 0.4), rgba(255, 255, 255, 0.05));
-  background-image: -o-linear-gradient(top, rgba(255, 255, 255, 0.4), rgba(255, 255, 255, 0.05));
-  background-image: -ms-linear-gradient(top, rgba(255, 255, 255, 0.4), rgba(255, 255, 255, 0.05));
-  background-image: -webkit-linear-gradient(top, rgba(255, 255, 255, 0.4), rgba(255, 255, 255, 0.05));
-  background-image: linear-gradient(top, rgba(255, 255, 255, 0.4), rgba(255, 255, 255, 0.05));
-  background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(255, 255, 255, 0.4)), to(rgba(255, 255, 255, 0.05)));
-  /* letterpress effect */
-
-  text-shadow: 0 -1px 1px rgba(0, 0, 0, 0.25), -2px 0 1px rgba(0, 0, 0, 0.25);
-  /* sombra pra fora, pra profundidade */
-
-  -moz-box-shadow: 1px 1px 3px rgba(0, 0, 0, 0.5);
-  -webkit-box-shadow: 1px 1px 3px rgba(0, 0, 0, 0.5);
-  box-shadow: 1px 1px 3px rgba(0, 0, 0, 0.5);
-  /* gradiente e sombra no IE */
-
-  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr=#60FFFFFF,endColorstr=#10FFFFFF), progid:DXImageTransform.Microsoft.Shadow(color=#888888,direction=180,strength=1);
-  -ms-filter: "progid:DXImageTransform.Microsoft.gradient(startColorstr=#60FFFFFF,endColorstr=#10FFFFFF), progid:DXImageTransform.Microsoft.Shadow(color=#888888,direction=180,strength=1)";
-  /* borda redonda */
-
-  -moz-border-radius: 0.35em;
-  -webkit-border-radius: 0.35em;
-  border-radius: 0.35em;
-  color: #FFF;
-  cursor: pointer;
-  font: bold 16px "Helvetica Neue", Helvetica, Arial, clean, sans-serif;
-  margin: 0.2em;
-  padding: 0.25em 0.4em;
-  position: relative;
-  text-align: center;
-  text-decoration: none;
-  white-space: nowrap;
-  width: auto;
-  user-select: none;
-  -moz-user-select: none;
-  zoom: 1;
-  /* hasLayout no IE */
-
-  /* Cross browser inline block hack - http://blog.mozilla.com/webdev/2009/02/20/cross-browser-inline-block/ */
-
-  display: -moz-inline-stack;
-  display: inline-block;
-  *display: inline !important;
-  /* nao pode ser o ultimo por causa do n95 */
-
-  vertical-align: middle;
-}
-.nicebutton:hover {
-  /* fundo gradiente */
-
-  background-image: -o-linear-gradient(top, rgba(0, 0, 0, 0.15), rgba(0, 0, 0, 0.01));
-  background-image: -ms-linear-gradient(top, rgba(0, 0, 0, 0.15), rgba(0, 0, 0, 0.01));
-  background-image: -webkit-linear-gradient(top, rgba(0, 0, 0, 0.15), rgba(0, 0, 0, 0.01));
-  background-image: -moz-linear-gradient(top, rgba(0, 0, 0, 0.15), rgba(0, 0, 0, 0.01));
-  background-image: linear-gradient(top, rgba(255, 255, 255, 0.05), rgba(255, 255, 255, 0.25));
-  background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0.15)), to(rgba(0, 0, 0, 0.05)));
-  /* gradiente e sombra no IE */
-
-  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr=#30000000,endColorstr=#02000000), progid:DXImageTransform.Microsoft.Shadow(color=#CCCCCC,direction=180,strength=1);
-  -ms-filter: "progid:DXImageTransform.Microsoft.gradient(startColorstr=#30000000,endColorstr=#02000000), progid:DXImageTransform.Microsoft.Shadow(color=#CCCCCC,direction=180,strength=1)";
-  /* sombra pra fora, pra profundidade */
-
-  -moz-box-shadow: 1px 1px 3px rgba(0, 0, 0, 0.3);
-  -webkit-box-shadow: 1px 1px 3px rgba(0, 0, 0, 0.3);
-  box-shadow: 1px 1px 3px rgba(0, 0, 0, 0.3);
-}
-.nicebutton:active {
-  /* sombra pra dentro, pra profundidade negativa */
-
-  -moz-box-shadow: inset 1px 1px 2px rgba(0, 0, 0, 0.6);
-  -webkit-box-shadow: 0 0 0;
-  /* webkit não suporta inset */
-
-  box-shadow: inset 1px 1px 2px rgba(0, 0, 0, 0.6);
-  /* quando clica, desce um pouquinho */
-
-  top: 1px;
-}
-/* Gradiente fake no Opera, FF3.5-, Safari 3 
-     * (opcional - precisa do detector de gradientes em JavaScript)
-     */
-.no-gradient .nicebutton {
-  line-height: 1;
-}
-.no-gradient .nicebutton:before, .no-gradient .nicebutton:after {
-  content: ' ';
-  display: block;
-  height: 0.8em;
-  /* reset do reflexo */
-
-  opacity: 1;
-  -moz-border-radius: 0;
-  border-radius: 0;
-}
-.no-gradient .nicebutton:before {
-  background: rgba(255, 255, 255, 0.25);
-  margin: -0.25em -0.4em -0.5em -0.4em;
-  -moz-border-radius-topleft: 0.35em;
-  -moz-border-radius-topright: 0.35em;
-  -webkit-border-top-left-radius: 0.35em;
-  -webkit-border-top-right-radius: 0.35em;
-  border-top-left-radius: 0.35em;
-  border-top-right-radius: 0.35em;
-}
-.no-gradient .nicebutton:hover:before {
-  background: rgba(0, 0, 0, 0.3);
-}
-.no-gradient .nicebutton:after {
-  background: rgba(255, 255, 255, 0);
-  margin: -0.5em -0.4em -0.25em -0.4em;
-  -moz-border-radius-bottomleft: 0.35em;
-  -moz-border-radius-bottomright: 0.35em;
-  -webkit-border-bottom-left-radius: 0.35em;
-  -webkit-border-bottom-right-radius: 0.35em;
-  border-bottom-left-radius: 0.35em;
-  border-bottom-right-radius: 0.35em;
-}
-.no-gradient .nicebutton:hover:after {
-  background: rgba(0, 0, 0, 0.2);
-}
-.no-gradient .nicebutton:active:after {
-  /* reset do reflexo */
-
-  margin: -0.5em -0.4em -0.25em -0.4em;
-  height: 0.8em;
-}
+.nicebutton{background-color:#444;background-image:-moz-linear-gradient(top,rgba(255,255,255,0.4),rgba(255,255,255,0.05));background-image:-o-linear-gradient(top,rgba(255,255,255,0.4),rgba(255,255,255,0.05));background-image:-ms-linear-gradient(top,rgba(255,255,255,0.4),rgba(255,255,255,0.05));background-image:-webkit-linear-gradient(top,rgba(255,255,255,0.4),rgba(255,255,255,0.05));background-image:linear-gradient(top,rgba(255,255,255,0.4),rgba(255,255,255,0.05));background-image:-webkit-gradient(linear,left top,left bottom,from(rgba(255,255,255,0.4)),to(rgba(255,255,255,0.05)));text-shadow:0 -1px 1px rgba(0,0,0,0.25),-2px 0 1px rgba(0,0,0,0.25);-moz-box-shadow:1px 1px 3px rgba(0,0,0,0.5);-webkit-box-shadow:1px 1px 3px rgba(0,0,0,0.5);box-shadow:1px 1px 3px rgba(0,0,0,0.5);filter:progid:DXImageTransform.Microsoft.gradient(startColorstr=#60FFFFFF,endColorstr=#10FFFFFF),progid:DXImageTransform.Microsoft.Shadow(color=#888888,direction=180,strength=1);-ms-filter:"progid:DXImageTransform.Microsoft.gradient(startColorstr=#60FFFFFF,endColorstr=#10FFFFFF), progid:DXImageTransform.Microsoft.Shadow(color=#888888,direction=180,strength=1)";-moz-border-radius:.35em;-webkit-border-radius:.35em;border-radius:.35em;color:#FFF;cursor:pointer;font:bold 16px "Helvetica Neue",Helvetica,Arial,clean,sans-serif;margin:.2em;padding:.25em .4em;position:relative;text-align:center;text-decoration:none;white-space:nowrap;width:auto;user-select:none;-moz-user-select:none;zoom:1;display:-moz-inline-stack;display:inline-block;*display:inline!important;vertical-align:middle}.nicebutton:hover{background-image:-o-linear-gradient(top,rgba(0,0,0,0.15),rgba(0,0,0,0.01));background-image:-ms-linear-gradient(top,rgba(0,0,0,0.15),rgba(0,0,0,0.01));background-image:-webkit-linear-gradient(top,rgba(0,0,0,0.15),rgba(0,0,0,0.01));background-image:-moz-linear-gradient(top,rgba(0,0,0,0.15),rgba(0,0,0,0.01));background-image:linear-gradient(top,rgba(255,255,255,0.05),rgba(255,255,255,0.25));background-image:-webkit-gradient(linear,left top,left bottom,from(rgba(0,0,0,0.15)),to(rgba(0,0,0,0.05)));filter:progid:DXImageTransform.Microsoft.gradient(startColorstr=#30000000,endColorstr=#02000000),progid:DXImageTransform.Microsoft.Shadow(color=#CCCCCC,direction=180,strength=1);-ms-filter:"progid:DXImageTransform.Microsoft.gradient(startColorstr=#30000000,endColorstr=#02000000), progid:DXImageTransform.Microsoft.Shadow(color=#CCCCCC,direction=180,strength=1)";-moz-box-shadow:1px 1px 3px rgba(0,0,0,0.3);-webkit-box-shadow:1px 1px 3px rgba(0,0,0,0.3);box-shadow:1px 1px 3px rgba(0,0,0,0.3)}.nicebutton:active{-moz-box-shadow:inset 1px 1px 2px rgba(0,0,0,0.6);-webkit-box-shadow:0;box-shadow:inset 1px 1px 2px rgba(0,0,0,0.6);top:1px}.no-gradient .nicebutton{line-height:1}.no-gradient .nicebutton:before,.no-gradient .nicebutton:after{content:' ';display:block;height:.8em;opacity:1;-moz-border-radius:0;border-radius:0}.no-gradient .nicebutton:before{background:rgba(255,255,255,0.25);margin:-0.25em -0.4em -0.5em -0.4em;-moz-border-radius-topleft:.35em;-moz-border-radius-topright:.35em;-webkit-border-top-left-radius:.35em;-webkit-border-top-right-radius:.35em;border-top-left-radius:.35em;border-top-right-radius:.35em}.no-gradient .nicebutton:hover:before{background:rgba(0,0,0,0.3)}.no-gradient .nicebutton:after{background:rgba(255,255,255,0);margin:-0.5em -0.4em -0.25em -0.4em;-moz-border-radius-bottomleft:.35em;-moz-border-radius-bottomright:.35em;-webkit-border-bottom-left-radius:.35em;-webkit-border-bottom-right-radius:.35em;border-bottom-left-radius:.35em;border-bottom-right-radius:.35em}.no-gradient .nicebutton:hover:after{background:rgba(0,0,0,0.2)}.no-gradient .nicebutton:active:after{margin:-0.5em -0.4em -0.25em -0.4em;height:.8em}
