--- a/src/css/base.css
+++ b/src/css/base.css
@@ -1,22 +1,1 @@
-* {
-  -moz-box-sizing: border-box;
-  -webkit-box-sizing: border-box;
-  box-sizing: border-box;
-}
-html {
-  background: url(../img/bg.gif) repeat;
-  margin: 0;
-  padding: 0;
-}
-body {
-  position: relative;
-  margin: 0;
-}
-header, section, .container {
-  width: 100%;
-}
-::-moz-selection, ::selection {
-  background: #005a82;
-  color: #fff;
-  text-shadow: none;
-}
+*{-moz-box-sizing:border-box;-webkit-box-sizing:border-box;box-sizing:border-box}html{background:url(../img/bg.gif) repeat;margin:0;padding:0}body{position:relative;margin:0}header,section,.container{width:100%}::-moz-selection,::selection{background:#005a82;color:#fff;text-shadow:none}
