--- a/src/css/layout.css
+++ b/src/css/layout.css
@@ -1,508 +1,1 @@
-/**
- *
- * Layout mais básico possível, só definindo estrutura dos elementos e assumindo 100% da tela.
- *  (interessante pensar num feature phone de 240px aqui)
- *
- */
-body {
-  color: #222;
-  font-family: Arial, Helvetica Neue, Helvetica, sans-serif;
-  position: relative;
-}
-p {
-  font-family: Georgia, Cambria, Times, Times New Roman, serif;
-  font-size: 1em;
-  line-height: 1.4em;
-  margin-top: 0;
-  margin-bottom: 1em;
-  padding: 0 1em;
-}
-header #chamada, header h1, header h3 {
-  font-family: Tienne, Baskerville, Times, serif;
-}
-header {
-  text-align: center;
-}
-header #chamada, header hgroup {
-  margin-left: auto;
-  margin-right: auto;
-  text-align: center;
-  width: 96%;
-}
-header #chamada {
-  color: #999;
-  margin-top: 3px;
-  font-weight: lighter;
-  text-shadow: 0px -1px 1px rgba(200, 200, 200, 0.5);
-}
-header h1 {
-  color: #222;
-  font-size: 1.75em;
-  font-weight: normal;
-  margin-bottom: 0;
-  text-shadow: 0px -1px 1px rgba(150, 150, 150, 0.5);
-  text-transform: uppercase;
-}
-header h2 {
-  color: #555;
-  font-size: 1em;
-  font-weight: normal;
-  margin-top: 0;
-}
-header h2:before {
-  content: '- ';
-}
-header h2:after {
-  content: ' -';
-}
-header img {
-  border: 5px solid white;
-  height: auto;
-  margin: 0.5em auto;
-  max-width: 340px;
-  width: 70%;
-  z-index: 1;
-  -moz-box-shadow: 0 0 5px #888;
-  -webkit-box-shadow: 0 0 5px #888;
-  box-shadow: 0 0 5px #888;
-}
-header #logos {
-  background: #005a82;
-  text-align: center;
-}
-header #logos a {
-  background: url(../img/logos.png) no-repeat;
-  display: inline-block;
-  height: 70px;
-  overflow: hidden;
-  margin: 2px 16px 4px 16px;
-  text-indent: -999em;
-}
-header #logos a[href='http://www.elsevier.com.br'] {
-  background-position: 0 0;
-  width: 70px;
-}
-header #logos a[href='http://www.campus.com.br'] {
-  background-position: -80px -10px;
-  width: 70px;
-}
-header #logos a[href='http://www.caelum.com.br'] {
-  background-position: -165px -10px;
-  width: 120px;
-}
-.compreja {
-  margin: 1.5em auto;
-  text-align: center;
-}
-.compreja h3 {
-  color: #999;
-  font-size: 1.3em;
-  font-weight: lighter;
-  margin-bottom: 0.6em;
-  text-shadow: 0px -1px 1px rgba(200, 200, 200, 0.5);
-}
-.compreja a {
-  background: #ff7f00;
-  color: white;
-  font-size: 1.5em;
-  font-weight: normal;
-  padding: .35em 0.5em;
-  margin-bottom: 0.5em;
-}
-.compreja a:hover {
-  color: white;
-}
-.compreja span {
-  display: block;
-  font-size: 1em;
-}
-#descricao {
-  margin-top: 30px;
-}
-#social {
-  margin: 20px auto;
-  width: 90%;
-}
-#social .fb-like, #social #___plusone_0 {
-  margin-right: 10px !important;
-}
-.twitter-share-button {
-  visibility: hidden;
-}
-iframe.twitter-share-button {
-  visibility: visible;
-}
-#curso {
-  background: #005a82;
-  margin: 1.5em 0 0 0;
-  width: 100%;
-}
-#curso h2, #curso h3 {
-  font-weight: normal;
-  margin: 0;
-  padding: 0;
-}
-#curso .container {
-  margin-left: auto;
-  margin-right: auto;
-  padding-bottom: 3px;
-  text-align: right;
-  width: 96%;
-}
-#curso hgroup {
-  font-family: Arial, sans-serif;
-  text-align: center;
-}
-#curso hgroup h2 {
-  color: white;
-  font-size: 1.35em;
-  padding-top: 1em;
-}
-#curso hgroup h3 {
-  color: #d4cc88;
-  font-size: 1.05em;
-  padding: 0.3em 0 0 0;
-}
-#curso .fj91 {
-  background: url(http://www.caelum.com.br/imagens/cursos/icones/100/FJ-91.png) top left no-repeat;
-  display: block;
-  height: 100px;
-  /* fixo, por causa do icone fixo */
-
-  margin: 1em auto;
-  max-width: 23em;
-  position: relative;
-  text-align: left;
-}
-#curso .fj91 a {
-  display: block;
-  height: 100%;
-  padding: 0 0 0 110px;
-  /* fixo, por causa do icone fixo */
-
-  text-decoration: none;
-}
-#curso .fj91 h3 {
-  font-size: 1em;
-  font-weight: normal;
-  margin: 0;
-}
-#curso .fj91 h3.sigla a {
-  color: white;
-  height: 35px;
-  font-size: 1.85em;
-  padding-top: 0;
-}
-#curso .fj91 h3.nome a {
-  color: white;
-  height: 80px;
-  font-size: 1.30em;
-}
-#outroscursos {
-  background: #005a82;
-  padding: 10px 0;
-  text-align: center;
-}
-#outroscursos .container {
-  background: #085171;
-  padding: 0.2em 0;
-  margin: 0 auto;
-  width: 96%;
-  -moz-border-radius: 5px;
-  -webkit-border-radius: 5px;
-  border-radius: 5px;
-  -moz-box-shadow: inset 1px 1px 1px #033151;
-  -webkit-box-shadow: inset 1px 1px 1px #033151;
-  box-shadow: inset 1px 1px 1px #033151;
-}
-#outroscursos h2 {
-  color: white;
-  display: block;
-  font-size: 1em;
-  font-weight: normal;
-  margin: 0.5em 0 0 0;
-}
-#outroscursos h3 {
-  display: inline-block;
-  font-size: 0.9em;
-  margin: 8px auto;
-  min-height: 50px;
-  /* tamanho da imagem */
-
-  max-width: 220px;
-  text-align: left;
-}
-#outroscursos h3 a {
-  color: white;
-  display: block;
-  font-weight: normal;
-  padding-left: 60px;
-  padding-top: 4px;
-  text-decoration: none;
-}
-#outroscursos .online {
-  background: #e5aa16;
-  color: #333;
-  padding: 1px 3px;
-  font-size: 0.8em;
-  font-weight: normal;
-  text-shadow: 0px -1px 1px rgba(200, 200, 200, 0.5);
-  -moz-border-radius: 3px;
-  -webkit-border-radius: 3px;
-  border-radius: 3px;
-}
-#outroscursos .fj16 {
-  background: url(http://www.caelum.com.br/imagens/cursos/icones/50/FJ-16.png) no-repeat left top;
-}
-#outroscursos .fj95 {
-  background: url(../img/FJ-95.png) no-repeat left top;
-}
-section {
-  margin: 20px auto;
-}
-section h1 {
-  font-family: Tienne, serif;
-  font-size: 1.65em;
-  font-weight: normal;
-  margin: 0.6em auto;
-  text-transform: uppercase;
-}
-section h1:before {
-  content: '♦ ';
-  font-size: 60%;
-}
-#conteudo {
-  background: white;
-  margin: 0 auto;
-  padding-bottom: 1.15em;
-  width: 100%;
-}
-#conteudo h1 {
-  margin-top: 0;
-  padding-top: 1.5em;
-  padding-bottom: 0;
-}
-#conteudo h1 + ol {
-  list-style-type: none;
-  margin: 20px auto;
-  max-width: 895px;
-  padding: 0;
-  width: 96%;
-}
-#conteudo h1 + ol li {
-  font-weight: bold;
-  margin-bottom: 1em;
-}
-#conteudo ol ol {
-  margin: 0;
-}
-#conteudo ol ol li {
-  font-weight: normal;
-  margin: 0;
-}
-#conteudo ol a {
-  color: #005a82;
-}
-#conteudo ol a:visited {
-  color: #805070;
-}
-#conteudo ol a:hover {
-  color: #285bFF;
-}
-#conteudo .compreja {
-  margin-top: 2em;
-}
-#tectura {
-  background: #005a82;
-  margin-top: 0;
-  margin-bottom: 30px;
-}
-#tectura p {
-  background: url(../img/tectura.png) right bottom no-repeat;
-  background-size: 100%;
-  font-size: 1.3em;
-  font-weight: normal;
-  margin: 0 auto;
-  padding: 10px 0;
-  width: 96%;
-}
-#tectura a {
-  color: white;
-  display: block;
-  padding-bottom: 60px;
-  text-align: center;
-  text-decoration: none;
-}
-#autores .autor {
-  padding: 1em;
-  position: relative;
-  vertical-align: top;
-  width: 100%;
-}
-#autores .autor img {
-  border: 3px solid white;
-  height: 90px;
-  width: 90px;
-  -moz-box-shadow: 0 0 5px #888;
-  -webkit-box-shadow: 0 0 5px #888;
-  box-shadow: 0 0 5px #888;
-}
-#autores .autor h2 {
-  color: #888;
-  font-family: Tienne, serif;
-  font-size: 1.8em;
-  font-weight: normal;
-  position: absolute;
-  left: 110px;
-  top: 12px;
-  width: 10px;
-}
-#autores .autor p {
-  padding: 0.7em 0 0 0;
-  margin-bottom: 0;
-}
-#autores #falecom {
-  color: #888;
-  font-family: Tienne, serif;
-  font-size: 1.3em;
-  margin: 1.4em 0 2em 0;
-  text-align: center;
-}
-#autores #falecom a {
-  color: #005a82;
-  word-wrap: break-word;
-}
-#autores #falecom a:hover {
-  text-underline: none;
-}
-#facebook {
-  background: white;
-  padding: 30px 0;
-  text-align: center;
-  width: 100%;
-}
-#facebook span, #facebook .fb-comments {
-  display: block;
-  margin: 0;
-  padding: 0;
-  width: 100%;
-}
-#facebook iframe {
-  max-width: 800px;
-  width: 97% !important;
-}
-#fb-root iframe {
-  width: 100% !important;
-}
-footer {
-  background: #005a82;
-  clear: both;
-  margin: 0;
-  padding: 1em 0;
-  width: 100%;
-}
-footer .container {
-  position: relative;
-}
-footer hgroup {
-  position: relative;
-  text-align: center;
-  width: 100%;
-}
-footer h1 {
-  color: white;
-  font-family: Tienne, serif;
-  font-size: 1.2em;
-  font-weight: normal;
-  margin-bottom: 6px;
-  text-transform: uppercase;
-}
-footer h2 {
-  color: #D4CC88;
-  font-family: Arial, sans-serif;
-  font-size: 1em;
-  font-weight: normal;
-  margin: 0;
-  padding: 0;
-}
-footer h2:before {
-  content: '- ';
-}
-footer h2:after {
-  content: ' -';
-}
-footer ul {
-  margin: 2em auto 0 auto;
-  padding: 0;
-  width: 96%;
-  /* multi-coluna com firefox, chrome, safari */
-
-  -moz-column-count: 2;
-  -moz-column-gap: 0.8em;
-  -moz-column-rule: none;
-  -webkit-column-count: 2;
-  -webkit-column-gap: 0.8em;
-  -webkit-column-rule: none;
-  /* css3 */
-
-  column-count: 2;
-  column-gap: 0.8em;
-  column-rule: none;
-}
-footer ul li {
-  list-style-type: none;
-}
-footer ul li a {
-  color: white;
-  display: block;
-  min-height: 40px;
-  /* touch size */
-
-  text-decoration: none;
-}
-footer ul li a:visited {
-  color: white;
-}
-footer ul li a:hover {
-  color: #AAF;
-  text-decoration: underline;
-}
-footer ul li.maior {
-  margin-bottom: 1em;
-}
-footer ul li:last-child {
-  margin-bottom: 2em;
-}
-footer img {
-  border: 3px solid white;
-  display: block;
-  margin: 0 auto;
-  width: 50%;
-  -moz-box-shadow: 0 0 5px #888;
-  -webkit-box-shadow: 0 0 5px #888;
-  box-shadow: 0 0 5px #888;
-}
-footer #logos {
-  text-align: center;
-  width: 100%;
-}
-footer #logos a {
-  background: url(../img/logos.png) no-repeat;
-  display: inline-block;
-  height: 70px;
-  overflow: hidden;
-  margin: 5px 10px;
-  text-indent: -999em;
-}
-footer #logos a[href='http://www.elsevier.com.br'] {
-  background-position: 0 0;
-  width: 70px;
-}
-footer #logos a[href='http://www.campus.com.br'] {
-  background-position: -80px -10px;
-  width: 70px;
-}
-footer #logos a[href='http://www.caelum.com.br'] {
-  background-position: -165px -10px;
-  width: 120px;
-}
+body{color:#222;font-family:Arial,Helvetica Neue,Helvetica,sans-serif;position:relative}p{font-family:Georgia,Cambria,Times,Times New Roman,serif;font-size:1em;line-height:1.4em;margin-top:0;margin-bottom:1em;padding:0 1em}header #chamada,header h1,header h3{font-family:Tienne,Baskerville,Times,serif}header{text-align:center}header #chamada,header hgroup{margin-left:auto;margin-right:auto;text-align:center;width:96%}header #chamada{color:#999;margin-top:3px;font-weight:lighter;text-shadow:0 -1px 1px rgba(200,200,200,0.5)}header h1{color:#222;font-size:1.75em;font-weight:normal;margin-bottom:0;text-shadow:0 -1px 1px rgba(150,150,150,0.5);text-transform:uppercase}header h2{color:#555;font-size:1em;font-weight:normal;margin-top:0}header h2:before{content:'- '}header h2:after{content:' -'}header img{border:5px solid white;height:auto;margin:.5em auto;max-width:340px;width:70%;z-index:1;-moz-box-shadow:0 0 5px #888;-webkit-box-shadow:0 0 5px #888;box-shadow:0 0 5px #888}header #logos{background:#005a82;text-align:center}header #logos a{background:url(../img/logos.png) no-repeat;display:inline-block;height:70px;overflow:hidden;margin:2px 16px 4px 16px;text-indent:-999em}header #logos a[href='http://www.elsevier.com.br']{background-position:0 0;width:70px}header #logos a[href='http://www.campus.com.br']{background-position:-80px -10px;width:70px}header #logos a[href='http://www.caelum.com.br']{background-position:-165px -10px;width:120px}.compreja{margin:1.5em auto;text-align:center}.compreja h3{color:#999;font-size:1.3em;font-weight:lighter;margin-bottom:.6em;text-shadow:0 -1px 1px rgba(200,200,200,0.5)}.compreja .nicebutton{background:#ff7f00;color:white;font-size:1.5em;font-weight:normal;padding:.35em .5em;margin-bottom:.5em}.compreja .nicebutton:hover{color:white}.compreja span{display:block;font-size:1em}#descricao{margin-top:30px}#social{margin:20px auto;width:90%}#social .fb-like,#social #___plusone_0{margin-right:10px!important}.twitter-share-button{visibility:hidden}iframe.twitter-share-button{visibility:visible}#curso{background:#005a82;margin:1.5em 0 0 0;width:100%}#curso h2,#curso h3{font-weight:normal;margin:0;padding:0}#curso .container{margin-left:auto;margin-right:auto;padding-bottom:3px;text-align:right;width:96%}#curso hgroup{font-family:Arial,sans-serif;text-align:center}#curso hgroup h2{color:white;font-size:1.35em;padding-top:1em}#curso hgroup h3{color:#d4cc88;font-size:1.05em;padding:.3em 0 0 0}#curso .fj91{background:url(http://www.caelum.com.br/imagens/cursos/icones/100/FJ-91.png) top left no-repeat;display:block;height:100px;margin:1em auto;max-width:23em;position:relative;text-align:left}#curso .fj91 a{display:block;height:100%;padding:0 0 0 110px;text-decoration:none}#curso .fj91 h3{font-size:1em;font-weight:normal;margin:0}#curso .fj91 h3.sigla a{color:white;height:35px;font-size:1.85em;padding-top:0}#curso .fj91 h3.nome a{color:white;height:80px;font-size:1.30em}#outroscursos{background:#005a82;padding:10px 0;text-align:center}#outroscursos .container{background:#085171;padding:.2em 0;margin:0 auto;width:96%;-moz-border-radius:5px;-webkit-border-radius:5px;border-radius:5px;-moz-box-shadow:inset 1px 1px 1px #033151;-webkit-box-shadow:inset 1px 1px 1px #033151;box-shadow:inset 1px 1px 1px #033151}#outroscursos h2{color:white;display:block;font-size:1em;font-weight:normal;margin:.5em 0 0 0}#outroscursos h3{display:inline-block;font-size:.9em;margin:8px auto;min-height:50px;max-width:220px;text-align:left}#outroscursos h3 a{color:white;display:block;font-weight:normal;padding-left:60px;padding-top:4px;text-decoration:none}#outroscursos .online{background:#e5aa16;color:#333;padding:1px 3px;font-size:.8em;font-weight:normal;text-shadow:0 -1px 1px rgba(200,200,200,0.5);-moz-border-radius:3px;-webkit-border-radius:3px;border-radius:3px}#outroscursos .fj16{background:url(http://www.caelum.com.br/imagens/cursos/icones/50/FJ-16.png) no-repeat left top}#outroscursos .fj95{background:url(../img/FJ-95.png) no-repeat left top}section{margin:20px auto}section h1{font-family:Tienne,serif;font-size:1.65em;font-weight:normal;margin:.6em auto;text-transform:uppercase}section h1:before{content:'♦ ';font-size:60%}#conteudo{background:white;margin:0 auto;padding-bottom:1.15em;width:100%}#conteudo h1{margin-top:0;padding-top:1.5em;padding-bottom:0}#conteudo h1+ol{list-style-type:none;margin:20px auto;max-width:895px;padding:0;width:96%}#conteudo h1+ol li{font-weight:bold;margin-bottom:1em}#conteudo ol ol{margin:0}#conteudo ol ol li{font-weight:normal;margin:0}#conteudo ol a{color:#005a82}#conteudo ol a:visited{color:#805070}#conteudo ol a:hover{color:#285bff}#conteudo .compreja{margin-top:2em}#tectura{background:#005a82;margin-top:0;margin-bottom:30px}#tectura p{background:url(../img/tectura.png) right bottom no-repeat;background-size:100%;font-size:1.3em;font-weight:normal;margin:0 auto;padding:10px 0;width:96%}#tectura a{color:white;display:block;padding-bottom:60px;text-align:center;text-decoration:none}#autores .autor{padding:1em;position:relative;vertical-align:top;width:100%}#autores .autor img{border:3px solid white;height:90px;width:90px;-moz-box-shadow:0 0 5px #888;-webkit-box-shadow:0 0 5px #888;box-shadow:0 0 5px #888}#autores .autor h2{color:#888;font-family:Tienne,serif;font-size:1.8em;font-weight:normal;position:absolute;left:110px;top:12px;width:10px}#autores .autor p{padding:.7em 0 0 0;margin-bottom:0}#autores #falecom{color:#888;font-family:Tienne,serif;font-size:1.3em;margin:1.4em 0 2em 0;text-align:center}#autores #falecom a{color:#005a82;word-wrap:break-word}#autores #falecom a:hover{text-underline:none}#facebook{background:white;padding:30px 0;text-align:center;width:100%}#facebook span,#facebook .fb-comments{display:block;margin:0;padding:0;width:100%}#facebook iframe{max-width:800px;width:97%!important}#fb-root iframe{width:100%!important}footer{background:#005a82;clear:both;margin:0;padding:1em 0;width:100%}footer .container{position:relative}footer hgroup{position:relative;text-align:center;width:100%}footer h1{color:white;font-family:Tienne,serif;font-size:1.2em;font-weight:normal;margin-bottom:6px;text-transform:uppercase}footer h2{color:#d4cc88;font-family:Arial,sans-serif;font-size:1em;font-weight:normal;margin:0;padding:0}footer h2:before{content:'- '}footer h2:after{content:' -'}footer ul{margin:2em auto 0 auto;padding:0;width:96%;-moz-column-count:2;-moz-column-gap:.8em;-moz-column-rule:none;-webkit-column-count:2;-webkit-column-gap:.8em;-webkit-column-rule:none;column-count:2;column-gap:.8em;column-rule:none}footer ul li{list-style-type:none}footer ul li a{color:white;display:block;min-height:40px;text-decoration:none}footer ul li a:visited{color:white}footer ul li a:hover{color:#AAF;text-decoration:underline}footer ul li.maior{margin-bottom:1em}footer ul li:last-child{margin-bottom:2em}footer img{border:3px solid white;display:block;margin:0 auto;width:50%;-moz-box-shadow:0 0 5px #888;-webkit-box-shadow:0 0 5px #888;box-shadow:0 0 5px #888}footer #logos{text-align:center;width:100%}footer #logos a{background:url(../img/logos.png) no-repeat;display:inline-block;height:70px;overflow:hidden;margin:5px 10px;text-indent:-999em}footer #logos a[href='http://www.elsevier.com.br']{background-position:0 0;width:70px}footer #logos a[href='http://www.campus.com.br']{background-position:-80px -10px;width:70px}footer #logos a[href='http://www.caelum.com.br']{background-position:-165px -10px;width:120px}
