--- a/src/less/layout.less
+++ b/src/less/layout.less
@@ -120,7 +120,7 @@ header {
 		text-shadow: 0px -1px 1px rgba(200,200,200,0.5);
 	}
 
-	a {
+	.nicebutton {
 		background: #ff7f00;
 		color: white;
 		font-size: 1.5em;
