--- a/src/less/600.less
+++ b/src/less/600.less
@@ -3,6 +3,18 @@
 		font-size: 15/16em;
 	}
 
+	.cc-barra {
+		h1 {
+			min-height: 66px;
+			line-height: 66px / 2;
+		}
+
+		img {
+			height: 66px;
+			width: 228px;
+		}
+	}
+
 	header {
 		#chamada {
 			width: 80%;
