--- a/src/less/layout.less
+++ b/src/less/layout.less
@@ -25,6 +25,52 @@ header {
 	}
 }
 
+// barra da casa do codigo
+.cc-barra {
+	background: black;
+	color: white;
+	padding: 10px 0;
+	margin-bottom: 10px;
+
+	.cc-container {
+		max-width: 700px;
+		margin: 0 auto;
+		position: relative;
+		text-align: center;
+	}
+
+	.cc-logo {
+		display: inline-block;
+		vertical-align: middle;
+	}
+
+	h1 {
+		font-family: Georgia, Cambria, Times, Times New Roman, serif;
+		font-size: 120%;
+		font-weight: normal;
+		text-align: left;
+		margin: 0;
+		padding-left: 1em;
+		
+		display: inline-block;
+		vertical-align: middle;
+
+		min-height: 66px * 0.7;
+		line-height: 66px * 0.7 / 2;
+
+		a {
+			color: #f90;
+		}
+	}
+
+	img {
+		// 70%
+		height: 66px * 0.7;
+		width: 228px * 0.7;
+	}
+}
+
+
 // layout
 
 header {	
